--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "typescript": "^4.4.3"
   },
   "peerDependencies": {
-    "final-form": "4.20.4"
+    "final-form": "4.20.4",
+    "react": "^17.0.2"
   },
   "lint-staged": {
     "*.{js*,ts*,json,md,css}": [
